--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,10 @@ language: java
 services:
   - mysql
 
+script: 
+  - cd PizzApp 
+  - mvn clean install -Dmaven.compiler.target=1.8 -Dmaven.compiler.source=1.8
+  
 notifications:
   email:
     recipients:
