por ahora uso hsql

--- a/PizzApp/src/main/resources/META-INF/hibernate.properties
+++ b/PizzApp/src/main/resources/META-INF/hibernate.properties
@@ -1,6 +1,6 @@
 hibernate.show_sql=true
 hibernate.hbm2ddl.auto=create
-#hibernate.default_schema=public
+hibernate.default_schema=public
 hibernate.dialect=org.hibernate.dialect.HSQLDialect
 #hibernate.dialect=org.hibernate.dialect.MySQLDialect
 
