se agrega configuración para poder hacer andar mysql en el travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -3,10 +3,22 @@ language: java
 services:
   - mysql
 
+#addons:
+#  apt:
+#    sources:
+#      - mysql-5.7-trusty
+#    packages:
+#      - mysql-server
+#      - mysql-client
+
 script: 
   - cd PizzApp 
   - mvn clean install -Dmaven.compiler.target=1.8 -Dmaven.compiler.source=1.8
-  
+
+before_install:
+  - mysql -e 'CREATE DATABASE pizzappdb;'
+  - mysql -e 'USE pizzappdb;'
+
 notifications:
   email:
     recipients:
