--- a/PizzApp/src/main/resources/META-INF/hibernate.properties
+++ b/PizzApp/src/main/resources/META-INF/hibernate.properties
@@ -1,8 +1,8 @@
 hibernate.show_sql=true
 hibernate.hbm2ddl.auto=create
 hibernate.default_schema=public
-hibernate.dialect=org.hibernate.dialect.HSQLDialect
-#hibernate.dialect=org.hibernate.dialect.MySQLDialect
+#hibernate.dialect=org.hibernate.dialect.HSQLDialect
+hibernate.dialect=org.hibernate.dialect.MySQLDialect
 
 # Needed by Hibernate3 Maven Plugin defined in pom.xml
 hibernate.connection.username=${jdbc.username}
