--- a/.travis.yml
+++ b/.travis.yml
@@ -16,8 +16,9 @@ script:
   - mvn clean install -Dmaven.compiler.target=1.8 -Dmaven.compiler.source=1.8
 
 before_install:
-  - mysql -e 'CREATE DATABASE pizzappdb;'
+  - mysql -u root -e 'CREATE DATABASE pizzappdb;'
   - mysql -e 'USE pizzappdb;'
+  - mysql -u root -e "GRANT ALL PRIVILEGES ON pizzappdb.* TO 'travis'@'%';";
 
 notifications:
   email:
