--- a/.travis.yml
+++ b/.travis.yml
@@ -3,22 +3,24 @@ language: java
 services:
   - mysql
 
-#addons:
-#  apt:
-#    sources:
-#      - mysql-5.7-trusty
-#    packages:
-#      - mysql-server
+addons:
+  apt:
+    sources:
+      - mysql-5.7-trusty
+    packages:
+      - mysql-server
 #      - mysql-client
+
+dist: trusty
 
 script: 
   - cd PizzApp 
   - mvn clean install -Dmaven.compiler.target=1.8 -Dmaven.compiler.source=1.8
 
 before_install:
-  - mysql -u root -e 'CREATE DATABASE pizzappdb;'
+  - mysql -e 'CREATE DATABASE pizzappdb;'
   - mysql -e 'USE pizzappdb;'
-  - mysql -u root -e "GRANT ALL PRIVILEGES ON pizzappdb.* TO 'travis'@'%';";
+#  - mysql -u root -e "GRANT ALL PRIVILEGES ON pizzappdb.* TO 'travis'@'%';";
 
 notifications:
   email:
