--- a/PizzApp/src/main/resources/META-INF/jdbc.properties
+++ b/PizzApp/src/main/resources/META-INF/jdbc.properties
@@ -8,4 +8,4 @@
 jdbc.driverClassName=com.mysql.jdbc.Driver
 jdbc.db.url=jdbc:mysql://localhost:3306/pizzappdb
 jdbc.username=root
-jdbc.password=root
+jdbc.password=
