--- a/.travis.yml
+++ b/.travis.yml
@@ -3,18 +3,22 @@ language: java
 services:
   - mysql
 
-dist: trusty
+build:
+  - mvn install -DskipTests=true -Dmaven.javadoc.skip=true -B -V
 
 script: 
   - cd PizzApp 
-  - mvn clean install -Dmaven.compiler.target=1.8 -Dmaven.compiler.source=1.8
+#  - mvn clean install -Dmaven.compiler.target=1.8 -Dmaven.compiler.source=1.8
+  - mvn clean verify
 
 before_install:
   - mysql -e 'CREATE DATABASE pizzappdb;'
   - mysql -e 'USE pizzappdb;'
-  - mysql_upgrade -u root -p --force
 #  - mysql -u root -e "GRANT ALL PRIVILEGES ON pizzappdb.* TO 'travis'@'%';";
 
+test:
+  - mvn test -B
+  
 notifications:
   email:
     recipients:
