--- a/.travis.yml
+++ b/.travis.yml
@@ -3,24 +3,21 @@ language: java
 services:
   - mysql
 
-addons:
-  apt:
-    sources:
-      - mysql-5.7-trusty
-    packages:
-      - mysql-server
-#      - mysql-client
+build:
+  - mvn install -DskipTests=true -Dmaven.javadoc.skip=true -B -V
 
-dist: trusty
-
-script: 
-  - cd PizzApp 
-  - mvn clean install -Dmaven.compiler.target=1.8 -Dmaven.compiler.source=1.8
+script:
+  - cd PizzApp
+#  - mvn clean install -Dmaven.compiler.target=1.8 -Dmaven.compiler.source=1.8
+  - mvn clean verify
 
 before_install:
   - mysql -e 'CREATE DATABASE pizzappdb;'
   - mysql -e 'USE pizzappdb;'
 #  - mysql -u root -e "GRANT ALL PRIVILEGES ON pizzappdb.* TO 'travis'@'%';";
+
+test:
+  - mvn test -B
 
 notifications:
   email:
