--- a/PizzApp-Front/package.json
+++ b/PizzApp-Front/package.json
@@ -20,11 +20,14 @@
     "@angular/platform-browser": "^6.0.3",
     "@angular/platform-browser-dynamic": "^6.0.3",
     "@angular/router": "^6.0.3",
+    "angular-font-awesome": "^3.1.2",
+    "angular2-fontawesome": "~5.2.0",
+    "bootstrap": "^4.1.1",
     "core-js": "^2.5.4",
+    "font-awesome": "^3.1.2",
     "ng2-bootstrap": "^1.6.3",
     "rxjs": "^6.0.0",
-    "zone.js": "^0.8.26",
-    "bootstrap": "^4.1.1"
+    "zone.js": "^0.8.26"
   },
   "devDependencies": {
     "@angular/compiler-cli": "^6.0.3",
