--- a/.travis.yml
+++ b/.travis.yml
@@ -23,5 +23,9 @@ notifications:
   email:
     recipients:
       - gil.maricruz@gmail.com
+      - salgadoema@gmail.com
+      - sabaliauskaspablo@gmail.com
+      - sirdemian@gmail.com
+      - schabpaula@gmail.com
     on_success: always # default: change
     on_failure: always # default: always
