--- a/PizzApp-Front/.vscode/launch.json
+++ b/PizzApp-Front/.vscode/launch.json
@@ -1,4 +1,4 @@
-/*
+
 {
     // Use IntelliSense para saber los atributos posibles.
     // Mantenga el puntero para ver las descripciones de los existentes atributos 
@@ -6,61 +6,25 @@
     "version": "0.2.0",
     "configurations": [
         {
-            "type": "node",
+            "name": "(gdb) Launch",
+            "type": "cppdbg",
             "request": "launch",
-            "name": "Iniciar programa",
-            "program": "${workspaceFolder}/ng serve",
-            "preLaunchTask": "tsc: build - tsconfig.json",
-            "outFiles": [
-   //             "${workspaceFolder}/dist/out-tsc/**///*.js"
-   /*         ]
-        }
-    ]
-}
-*/
-{
-    "version": "0.2.0",
-    "configurations": [
-        {
-            "name": "Iniciar",
-            "type": "node",
-            "request": "launch",
-            "program": "${workspaceFolder}/build/app.js",
-            "stopOnEntry": false,
+            "program": "${workspaceFolder}/a.out",
             "args": [],
-            "cwd": "${workspaceRoot}",
-            "preLaunchTask": null,
-            "runtimeExecutable": null,
-            "runtimeArgs": [
-                "--nolazy"
-            ],
-            "env": {
-                "NODE_ENV": "development"
-            },
-            "externalConsole": false,
-            "sourceMaps": true,
-            "outDir": "${workspaceRoot}/build"
+            "stopAtEntry": false,
+            "cwd": "${workspaceFolder}",
+            "environment": [],
+            "externalConsole": true,
+            "MIMode": "gdb",
+            "setupCommands": [
+                {
+                    "description": "Enable pretty-printing for gdb",
+                    "text": "-enable-pretty-printing",
+                    "ignoreFailures": true
+                }
+            ]
         },
-        {
-            "name": "Asociar",
-            "type": "node",
-            "request": "attach",
-            "port": 5858,
-            "address": "localhost",
-            "restart": false,
-            "sourceMaps": false,
-            "outDir": null,
-            "localRoot": "${workspaceRoot}",
-            "remoteRoot": null
-        },
-        {
-            "name": "Asociar al proceso",
-            "type": "node",
-            "request": "attach",
-            "processId": "${command.PickProcess}",
-            "port": 5858,
-            "sourceMaps": false,
-            "outDir": null
-        }
+
     ]
 }
+
